--- a/LisaD-Astro/src/pages/index.astro
+++ b/LisaD-Astro/src/pages/index.astro
@@ -14,13 +14,16 @@ import PortfolioPreview from '../components/PortfolioPreview.astro';
 
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro';
-// import Skills from '../components/Skills.astro';
-import Footer from '../components/Footer.astro';
+import Skills from '../components/Skills.astro';
+import Globals from '../components/globals.css';
 
 // Content Fetching: List four most recent work projects
-// const projects = (await getCollection('work'))
-// 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-// 	.slice(0, 4);
+const projects = (await getCollection('work'))
+	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+	.slice(0, 4);
+
+// Full Astro Component Syntax:
+// https://docs.astro.build/basics/astro-components/
 ---
 
 <BaseLayout>
@@ -34,8 +37,8 @@ import Footer from '../components/Footer.astro';
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Content-Creator</Pill>
-						<Pill><Icon icon="paint-brush" size="1.33em" /> Artist</Pill>
+						<!--<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill> -->
 					</div>
 				</Hero>
 
@@ -43,12 +46,64 @@ import Footer from '../components/Footer.astro';
 					alt="Lisa Downie wearing a white hooded top"
 					width="480"
 					height="620"
-					src="/assets/mewithglasses1.png"
+					src="/assets/lisa3.png"
 				/>
 			</header>
-			<ContactCTA />
-			<Footer />
-			
+
+			<Skills />
+		</div>
+
+		<main class="wrapper stack gap-20 lg:gap-48">
+			<section class="section with-background with-cta">
+				<header class="section-header stack gap-2 lg:gap-4">
+					<h3>Selected Work</h3>
+					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+				</header>
+
+				<div class="gallery">
+					<Grid variant="offset">
+						{
+							projects.map((project) => (
+								<li>
+									<PortfolioPreview project={project} />
+								</li>
+							))
+						}
+					</Grid>
+				</div>
+
+				<div class="cta">
+					<CallToAction href="/work/">
+						View All
+						<Icon icon="arrow-right" size="1.2em" />
+					</CallToAction>
+				</div>
+			</section>
+<!--
+			<section class="section with-background bg-variant">
+				<header class="section-header stack gap-2 lg:gap-4">
+					<h3>Mentions</h3>
+					<p>
+						I have been fortunate enough to receive praise for my work in several publications. Take
+						a look below to learn more.
+					</p>
+				</header>
+
+				<div class="gallery">
+					<Grid variant="small">
+						{
+							['Medium', 'BuzzFeed', 'The Next Web', 'awwwards.', 'TechCrunch'].map((brand) => (
+								<li class="mention-card">
+									<p>{brand}</p>
+								</li>
+							))
+						}
+					</Grid>
+				</div>
+			</section> -->
+		</main>
+
+		<ContactCTA />
 	</div>
 </BaseLayout>
 
