--- a/LisaD-Astro/src/pages/work.astro
+++ b/LisaD-Astro/src/pages/work.astro
@@ -7,7 +7,6 @@ import ContactCTA from '../components/ContactCTA.astro';
 import PortfolioPreview from '../components/PortfolioPreview.astro';
 import Hero from '../components/Hero.astro';
 import Grid from '../components/Grid.astro';
-import Footer from '../components/Footer.astro';
 
 const projects = (await getCollection('work')).sort(
 	(a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
@@ -15,8 +14,8 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Lisa Downie"
-	description="Learn about Lisa Downie's most recent projects"
+	title="My Work | Jeanine White"
+	description="Learn about Jeanine White's most recent projects"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
@@ -36,6 +35,5 @@ const projects = (await getCollection('work')).sort(
 			</Grid>
 		</main>
 		<ContactCTA />
-        <Footer />
 	</div>
 </BaseLayout>
